--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/typeorm": "^10.0.2",
+    "axios": "^1.7.7",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "mysql2": "^3.11.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
